--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,17 @@
     - merge_requests
     - master@chaen/chrissquare-hack-a-ton
 
+.defaults-micromamba:
+  image: registry.cern.ch/docker.io/mambaorg/micromamba
+  before_script:
+    - micromamba create --yes -c conda-forge --name test-env \
+      dirac-grid python pytest-asyncio pytest fastapi pydantic httpx \
+      gitpython git pyyaml email-validator python-multipart aiosqlite mypy
+    - eval "$(micromamba shell hook --shell=bash)"
+    - micromamba activate test-env
+    - pip install git+https://github.com/chrisburr/DIRAC.git@chris-hack-a-ton
+    - pip install .
+
 pre-commit:
   extends: .defaults
   image: registry.cern.ch/docker.io/library/python:3.11
@@ -17,15 +28,6 @@ pre-commit:
     - pre-commit run --all-files
 
 pytest:
-  extends: .defaults
-  image: registry.cern.ch/docker.io/mambaorg/micromamba
-  before_script:
-    - micromamba create --yes -c conda-forge --name test-env \
-      dirac-grid python pytest-asyncio pytest fastapi pydantic httpx \
-      gitpython git pyyaml email-validator python-multipart aiosqlite
-    - eval "$(micromamba shell hook --shell=bash)"
-    - micromamba activate test-env
-    - pip install git+https://github.com/chrisburr/DIRAC.git@chris-hack-a-ton
-    - pip install .
+  extends: .defaults-micromamba
   script:
-    - pytest -v
+    - mypy .
