--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,10 @@ extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "f
 
 [tool.mypy]
 plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]
-exclude = ["src/diracx/client"]
+exclude = ["^src/diracx/client", "^tests/"]
 allow_redefinition = true
+# strict = true
+enable_error_code = ["import", "attr-defined"]
 
 [[tool.mypy.overrides]]
 module = 'authlib.*'
