--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,8 @@
   before_script:
     - micromamba create --yes -c conda-forge --name test-env \
       dirac-grid python pytest-asyncio pytest fastapi pydantic httpx \
-      gitpython git pyyaml email-validator python-multipart aiosqlite mypy
+      gitpython git pyyaml email-validator python-multipart aiosqlite \
+      mypy pytest-cov
     - eval "$(micromamba shell hook --shell=bash)"
     - micromamba activate test-env
     - pip install git+https://github.com/chrisburr/DIRAC.git@chris-hack-a-ton
