--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,3 +26,6 @@ enable_error_code = ["import", "attr-defined"]
 [[tool.mypy.overrides]]
 module = 'authlib.*'
 ignore_missing_imports = true
+
+[tool.pytest.ini_options]
+addopts = ["-v", "--cov=diracx", "--cov-report=term-missing"]
