--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,12 +4,13 @@
     - master@chaen/chrissquare-hack-a-ton
 
 .defaults-micromamba:
+  extends: .defaults
   image: registry.cern.ch/docker.io/mambaorg/micromamba
   before_script:
     - micromamba create --yes -c conda-forge --name test-env \
       dirac-grid python pytest-asyncio pytest fastapi pydantic httpx \
       gitpython git pyyaml email-validator python-multipart aiosqlite \
-      mypy pytest-cov
+      mypy pytest-cov types-PyYAML types-cachetools types-requests
     - eval "$(micromamba shell hook --shell=bash)"
     - micromamba activate test-env
     - pip install git+https://github.com/chrisburr/DIRAC.git@chris-hack-a-ton
@@ -29,6 +30,11 @@ pre-commit:
     - pre-commit run --all-files
 
 pytest:
+  extends: .defaults-micromamba
+  script:
+    - pytest .
+
+mypy:
   extends: .defaults-micromamba
   script:
     - mypy .
