--- a/.coveragerc
+++ b/.coveragerc
@@ -2,3 +2,11 @@
 omit =
     tests/*
     src/diracx/client/*
+
+[report]
+exclude_lines =
+    # Have to re-enable the standard pragma
+    pragma: no cover
+
+    # Don't complain if tests don't hit defensive assertion code:
+    raise NotImplementedError
