--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,8 @@
     - micromamba create --yes -c conda-forge --name test-env \
       dirac-grid python pytest-asyncio pytest fastapi pydantic httpx \
       gitpython git pyyaml email-validator python-multipart aiosqlite \
-      mypy pytest-cov types-PyYAML types-cachetools types-requests
+      mypy pytest-cov types-PyYAML types-cachetools types-requests \
+      pytest-httpx isodate azure-core aiohttp
     - eval "$(micromamba shell hook --shell=bash)"
     - micromamba activate test-env
     - pip install git+https://github.com/chrisburr/DIRAC.git@chris-hack-a-ton
