--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ build-backend = "setuptools.build_meta"
 
 [tool.ruff]
 select = ["E", "F", "B", "I"]
-ignore = ["B905"]
+ignore = ["B905", "B008", "B006"]
 line-length = 120
 src = ["src", "tests"]
 
