--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,14 +7,9 @@
   extends: .defaults
   image: registry.cern.ch/docker.io/mambaorg/micromamba
   before_script:
-    - micromamba create --yes -c conda-forge --name test-env \
-      dirac-grid python pytest-asyncio pytest fastapi pydantic httpx \
-      gitpython git pyyaml email-validator python-multipart aiosqlite \
-      mypy pytest-cov types-PyYAML types-cachetools types-requests \
-      pytest-httpx isodate azure-core aiohttp
+    - micromamba env create --file environment.yml --name test-env
     - eval "$(micromamba shell hook --shell=bash)"
     - micromamba activate test-env
-    - pip install git+https://github.com/chrisburr/DIRAC.git@chris-hack-a-ton
     - pip install .
 
 pre-commit:
