--- a/environment.yml
+++ b/environment.yml
@@ -26,7 +26,9 @@ dependencies:
   - python-multipart
   - pyyaml
   - requests
+  - rich
   - sqlalchemy
+  - typer
   - types-cachetools
   - types-PyYAML
   - types-requests
