--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,14 +41,17 @@ jobs:
         shell: bash -el {0}
         run: |
           pytest . --cov-report=xml:coverage.xml --junitxml=report.xml
-      - name: Upload artifacts
-        if: always()
-        uses: actions/upload-artifact@v3
-        with:
-          name: Test reports
-          path: |
-            report.xml
-            coverage.xml
+      - name: Upload coverage report
+        uses: codecov/codecov-action@v3.1.0
+
+      #- name: Upload artifacts
+      #  if: always()
+      #  uses: actions/upload-artifact@v3
+      #  with:
+      #    name: Test reports
+      #    path: |
+      #      report.xml
+      #      coverage.xml
 
   # mypy:
   #   runs-on: ubuntu-latest
