--- a/.coveragerc
+++ b/.coveragerc
@@ -11,3 +11,5 @@ exclude_lines =
 
     # Don't complain if tests don't hit defensive assertion code:
     raise NotImplementedError
+
+    if TYPE_CHECKING:
