--- a/codecov.yml
+++ b/codecov.yml
@@ -4,3 +4,10 @@ coverage:
       default:
         target: 100%
         threshold: 1%
+        informational: true
+    patch:
+      default:
+        target: 100%
+        informational: false
+
+comment: false
