--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,19 +8,12 @@ on:
     branches:
       - main
 
-jobs:
-  pre-commit:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Set up pre-commit
-        run: |
-          pip install pre-commit
-      - name: Run pre-commit checks
-        run: |
-          pre-commit run --all-files
 
+defaults:
+  run:
+    shell: bash -el {0}
+
+jobs:
   pytest:
     runs-on: ubuntu-latest
     steps:
@@ -32,41 +25,30 @@ jobs:
           init-shell: bash
           post-cleanup: 'all'
       - name: Set up environment
-        shell: bash -el {0}
         run: |
           pip install pytest-github-actions-annotate-failures
           pip install git+https://github.com/chaen/DIRAC.git@chris-hack-a-ton
           pip install .
       - name: Run pytest
-        shell: bash -el {0}
         run: |
           pytest . --cov-report=xml:coverage.xml --junitxml=report.xml
       - name: Upload coverage report
         uses: codecov/codecov-action@v3.1.4
 
-      #- name: Upload artifacts
-      #  if: always()
-      #  uses: actions/upload-artifact@v3
-      #  with:
-      #    name: Test reports
-      #    path: |
-      #      report.xml
-      #      coverage.xml
-
-  # mypy:
-  #   runs-on: ubuntu-latest
-  #   container:
-  #     image: registry.cern.ch/docker.io/mambaorg/micromamba
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v3
-  #     - name: Set up environment
-  #       run: |
-  #         micromamba env create --file environment.yml --name test-env
-  #         eval "$(micromamba shell hook --shell=bash)"
-  #         micromamba activate test-env
-  #         pip install git+https://github.com/chaen/DIRAC.git@chris-hack-a-ton
-  #         pip install .
-  #     - name: Run mypy
-  #       run: |
-  #         mypy .
+  mypy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - uses: mamba-org/setup-micromamba@v1
+        with:
+          environment-file: environment.yml
+          init-shell: bash
+          post-cleanup: 'all'
+      - name: Set up environment
+        run: |
+          pip install git+https://github.com/chaen/DIRAC.git@chris-hack-a-ton
+          pip install .
+      - name: Run mypy
+        run: |
+          mypy .
