--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,3 +29,4 @@ ignore_missing_imports = true
 
 [tool.pytest.ini_options]
 addopts = ["-v", "--cov=diracx", "--cov-report=term-missing"]
+asyncio_mode = "auto"
