Use entry_points to discover routers

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,3 +34,8 @@ docs =
 [options.entry_points]
 console_scripts =
     diracx = diracx.cli:app
+diracx.services =
+	jobs = diracx.routers.job_manager:router
+	config = diracx.routers.configuration:router
+	auth = diracx.routers.auth:router
+	.well-known = diracx.routers.well_known:router
