Load database classes from entry_points

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,9 @@ docs =
 [options.entry_points]
 console_scripts =
     diracx = diracx.cli:app
+diracx.dbs =
+	AuthDB = diracx.db:AuthDB
+	JobDB = diracx.db:JobDB
 diracx.services =
 	jobs = diracx.routers.job_manager:router
 	config = diracx.routers.configuration:router
