Support extending security properties

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,8 @@ docs =
 [options.entry_points]
 console_scripts =
     diracx = diracx.cli:app
+diracx =
+	properties_module = diracx.core:properties
 diracx.dbs =
 	AuthDB = diracx.db:AuthDB
 	JobDB = diracx.db:JobDB
