Add initial documentation

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,6 +39,7 @@ diracx =
 diracx.dbs =
 	AuthDB = diracx.db:AuthDB
 	JobDB = diracx.db:JobDB
+	#DummyDB = diracx.db:DummyDB
 diracx.services =
 	jobs = diracx.routers.job_manager:router
 	config = diracx.routers.configuration:router
