--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,11 @@ build-backend = "setuptools.build_meta"
 [tool.setuptools_scm]
 
 [tool.ruff]
-select = ["E", "F", "B", "I"]
+select = ["E", "F", "B", "I", "PLE"]
 ignore = ["B905", "B008", "B006"]
 line-length = 120
 src = ["src", "tests"]
+exclude = ["src/diracx/client/"]
 
 [tool.ruff.flake8-bugbear]
 # Allow default arguments like, e.g., `data: List[str] = fastapi.Query(None)`.
