--- a/.github/workflows/containerised.yml
+++ b/.github/workflows/containerised.yml
@@ -30,3 +30,4 @@ jobs:
           context: .
           push: ${{ github.event_name == 'push' && github.repository == 'DIRACGrid/diracx' && github.ref_name == 'main' }}
           tags: ghcr.io/diracgrid/diracx/server:latest
+          platforms: linux/amd64,linux/arm64
