test: fix the version of pydantic to avoid differing results

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,7 +28,7 @@ repos:
     hooks:
       - id: mypy
         additional_dependencies:
-          - pydantic
+          - pydantic==1.10.10
           - sqlalchemy
           - types-PyYAML
           - types-cachetools
