--- a/environment.yml
+++ b/environment.yml
@@ -23,7 +23,7 @@ dependencies:
   - httpx
   - isodate
   - mypy
-  - pydantic
+  - pydantic =1.10.10
   - pytest
   - pytest-asyncio
   - pytest-cov
