feat: adding sandboxMetadataDB

--- a/setup.cfg
+++ b/setup.cfg
@@ -76,6 +76,7 @@ diracx =
 diracx.dbs =
 	AuthDB = diracx.db:AuthDB
 	JobDB = diracx.db:JobDB
+	SandboxMetadataDB = diracx.db:SandboxMetadataDB
 	#DummyDB = diracx.db:DummyDB
 diracx.services =
 	jobs = diracx.routers.job_manager:router
