--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,4 +33,4 @@ repos:
           - types-PyYAML
           - types-cachetools
           - types-requests
-        exclude: ^(src/diracx/client/|tests/)
+        exclude: ^(src/diracx/client/|tests/|build)
