--- a/setup.cfg
+++ b/setup.cfg
@@ -33,7 +33,7 @@ docs =
 
 [options.entry_points]
 console_scripts =
-    diracx = diracx.cli:app
+    dirac = diracx.cli:app
 diracx =
 	properties_module = diracx.core:properties
 diracx.dbs =
