--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,6 +18,12 @@ repos:
       - id: ruff
         args: ["--fix"]
 
+  - repo: https://github.com/pycqa/isort
+    rev: 5.11.2
+    hooks:
+      - id: isort
+        name: isort (python)
+
   - repo: https://github.com/psf/black
     rev: 23.7.0
     hooks:
