--- a/environment.yml
+++ b/environment.yml
@@ -49,4 +49,4 @@ dependencies:
   - types-requests
   - uvicorn
   # - pip:
-  #   - git+https://github.com/chaen/DIRAC.git@chris-hack-a-ton
+  #   - git+https://github.com/DIRACGrid/DIRAC.git@integration
