--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,6 +17,7 @@ repos:
     hooks:
       - id: ruff
         args: ["--fix"]
+        exclude: ^(src/diracx/client/)
 
   - repo: https://github.com/psf/black
     rev: 23.7.0
