--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,15 @@ build-backend = "setuptools.build_meta"
 [tool.setuptools_scm]
 
 [tool.ruff]
-select = ["E", "F", "B", "I", "PLE"]
+select = [
+    "E",    # pycodestyle errrors
+    "F",    # pyflakes
+    "B",    # flake8-bugbear
+    "I",    # isort
+    "PLE",  # pylint errors
+    "UP",   # pyUpgrade
+    "FLY",  # flynt
+]
 ignore = ["B905", "B008", "B006"]
 line-length = 120
 src = ["src", "tests"]
@@ -16,6 +24,12 @@ exclude = ["src/diracx/client/"]
 [tool.ruff.flake8-bugbear]
 # Allow default arguments like, e.g., `data: List[str] = fastapi.Query(None)`.
 extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body", "fastapi.Header"]
+
+[tool.black]
+line-length = 120
+
+[tool.isort]
+profile = "black"
 
 [tool.mypy]
 plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]
