--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,18 +17,20 @@ repos:
     hooks:
       - id: ruff
         args: ["--fix"]
+        exclude: ^(src/diracx/client/)
 
   - repo: https://github.com/psf/black
     rev: 23.7.0
     hooks:
       - id: black
+        exclude: ^(src/diracx/client/)
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.5.1
     hooks:
       - id: mypy
         additional_dependencies:
-          - pydantic==1.10.10
+          - pydantic==1.10.12
           - sqlalchemy
           - types-PyYAML
           - types-cachetools
