--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,10 @@ allow_redefinition = true
 enable_error_code = ["import", "attr-defined"]
 
 [[tool.mypy.overrides]]
+module = 'DIRAC.*'
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
 module = 'authlib.*'
 ignore_missing_imports = true
 
