initial add job params with opensearch

--- a/setup.cfg
+++ b/setup.cfg
@@ -77,6 +77,7 @@ diracx.dbs =
 	AuthDB = diracx.db:AuthDB
 	JobDB = diracx.db:JobDB
 	SandboxMetadataDB = diracx.db:SandboxMetadataDB
+	OpenSearchJobParametersDB = diracx.db:OpenSearchJobParametersDB
 	#DummyDB = diracx.db:DummyDB
 diracx.services =
 	jobs = diracx.routers.job_manager:router
