feat: implement jobloggingdb

--- a/setup.cfg
+++ b/setup.cfg
@@ -76,6 +76,7 @@ diracx =
 diracx.dbs =
 	AuthDB = diracx.db:AuthDB
 	JobDB = diracx.db:JobDB
+	JobLoggingDB = diracx.db:JobLoggingDB
 	SandboxMetadataDB = diracx.db:SandboxMetadataDB
 	#DummyDB = diracx.db:DummyDB
 diracx.services =
