--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -95,8 +95,15 @@ jobs:
             mv release.notes release.notes.old
             cat release.notes.old
             (echo -e "[${NEW_VERSION}]" &&  cat release.notes.new release.notes.old) > release.notes
-            git add release.notes
-            git commit -m "docs: Add release notes for $NEW_VERSION"
+            ###################3
+            # TODO: we should add the release notes somewhere at some point
+            # now we just don't do it because main branch is protected
+            # and we can't push directly from the CI
+            #git add release.notes
+            #git commit -m "docs: Add release notes for $NEW_VERSION"
+            # Stash is mandatory not to leave the repo dirty
+            git stash
+            ########################
             git show
             # Create the tag
             git tag "$NEW_VERSION"
