feat: implement kill, delete and remove job endpoints

--- a/setup.cfg
+++ b/setup.cfg
@@ -80,7 +80,8 @@ diracx.db.sql =
 	JobDB = diracx.db.sql:JobDB
 	JobLoggingDB = diracx.db.sql:JobLoggingDB
 	SandboxMetadataDB = diracx.db.sql:SandboxMetadataDB
-	#DummyDB = diracx.db:DummyDB
+	TaskQueueDB = diracx.db.sql:TaskQueueDB
+	#DummyDB = diracx.db.sql:DummyDB
 diracx.db.os =
 	JobParametersDB = diracx.db.os:JobParametersDB
 diracx.services =
