Add diracx.core.s3 with utility functions

--- a/environment.yml
+++ b/environment.yml
@@ -50,5 +50,9 @@ dependencies:
   - types-PyYAML
   - types-requests
   - uvicorn
+  - moto
+  - mypy-boto3-s3
+  - botocore
+  - boto3-stubs
   # - pip:
   #   - git+https://github.com/DIRACGrid/DIRAC.git@integration
