--- a/environment.yml
+++ b/environment.yml
@@ -46,10 +46,13 @@ dependencies:
   - rich
   - sqlalchemy
   - typer
-  - boto3-stubs
   - types-cachetools
   - types-PyYAML
   - types-requests
   - uvicorn
+  - moto
+  - mypy-boto3-s3
+  - botocore
+  - boto3-stubs
   # - pip:
   #   - git+https://github.com/DIRACGrid/DIRAC.git@integration
