--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,7 @@ jobs:
           pip install .
       - name: Start demo
         run: |
-          git clone https://github.com/DIRACGrid/diracx-charts.git ../diracx-charts
+          git clone https://github.com/chrisburr/diracx-charts.git ../diracx-charts -b update-notes
           ../diracx-charts/run_demo.sh --enable-coverage --exit-when-done $PWD
       - name: Debugging information
         run: |
