--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,7 +28,7 @@ repos:
     hooks:
       - id: mypy
         additional_dependencies:
-          - pydantic==1.10.10
+          - pydantic
           - sqlalchemy
           - types-PyYAML
           - types-cachetools
