--- a/environment.yml
+++ b/environment.yml
@@ -31,7 +31,7 @@ dependencies:
   - isodate
   - mypy
   - opensearch-py
-  - pydantic =1.10.10
+  - pydantic >=2
   - pyjwt
   - pytest
   - pytest-asyncio
