--- a/setup.cfg
+++ b/setup.cfg
@@ -42,7 +42,8 @@ install_requires =
 	isodate
 	mypy
 	opensearch-py
-	pydantic ==1.10.10
+	pydantic >=2
+	pydantic-settings >=2
 	python-dotenv
 	python-jose
 	python-multipart
