Add "dirac internal legacy generate-helm-values"

--- a/tests/cli/legacy/cs_sync/integration_test.cfg
+++ b/tests/cli/legacy/cs_sync/integration_test.cfg
@@ -26,6 +26,11 @@ DIRAC
     }
   }
 }
+DiracX
+{
+  URL = https://dirac-integration-tests.invalid:1234
+  LegacyExchangeApiKey = diracx:legacy:ChangeME
+}
 Systems
 {
   Configuration
