--- a/tests/cli/legacy/cs_sync/integration_test.cfg
+++ b/tests/cli/legacy/cs_sync/integration_test.cfg
@@ -1451,6 +1451,7 @@ Registry
     #@@-prod - /C=ch/O=DIRAC/OU=DIRAC CI/CN=ciuser - 2023-10-02 12:36:08
     Jenkins
     {
+      SupportMessage = contact tata@yoyo.fr
       #@@-prod - /C=ch/O=DIRAC/OU=DIRAC CI/CN=ciuser - 2023-10-02 12:36:08
       VOMSName = myVOMS
     }
