Fix outdated MR

--- a/environment.yml
+++ b/environment.yml
@@ -53,6 +53,7 @@ dependencies:
   - moto
   - aiobotocore
   - botocore
+  - pip
   - pip:
     - types-aiobotocore[essential]
     - boto3-stubs[essential]
