--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -17,6 +17,9 @@ jobs:
     name: PyPI deployment
     runs-on: "ubuntu-latest"
     if: github.event_name != 'push' || github.repository == 'DIRACGrid/diracx'
+    outputs:
+      new-version: ${{ steps.check-tag.outputs.new-version }}
+      create-release: ${{ steps.check-tag.outputs.create-release }}
     permissions:
       id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing on pypi
       actions: write
@@ -118,6 +121,12 @@ jobs:
           done
           # Also build the diracx metapackage
           python -m build --outdir $PWD/dist .
+      - name: 'Upload Artifact'
+        uses: actions/upload-artifact@v3
+        with:
+          name: diracx-whl
+          path: dist/diracx*.whl
+          retention-days: 5
       - name: Make release on GitHub
         if: steps.check-tag.outputs.create-release == 'true'
         run: |
@@ -138,3 +147,73 @@ jobs:
       - name: Publish package on PyPI
         if: steps.check-tag.outputs.create-release == 'true'
         uses: pypa/gh-action-pypi-publish@release/v1
+
+  docker:
+    needs: deploy-pypi
+    timeout-minutes:  30
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Login to GitHub container registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Download diracx wheels
+        uses: actions/download-artifact@v3
+        if: ${{ needs.deploy-pypi.outputs.create-release != 'true' }}
+        with:
+            name: diracx-whl
+      - name: "Find wheels"
+        id: find_wheel
+        if: ${{ needs.deploy-pypi.outputs.create-release != 'true' }}
+        run: |
+          # We need to copy them there to be able to access them in the RUN --mount
+          cp diracx*.whl containers/client/
+          cp diracx*.whl containers/services/
+          for wheel_fn in *.whl; do
+            pkg_name=$(basename "${wheel_fn}" | cut -d '-' -f 1)
+            echo "${pkg_name}-wheel-name=$(ls "${pkg_name}"-*.whl)" >> $GITHUB_OUTPUT
+          done
+
+      - name: Build and push client (release)
+        uses: docker/build-push-action@v5
+        if: ${{ needs.deploy-pypi.outputs.create-release == 'true' }}
+        with:
+          context: containers/client/
+          push: ${{ needs.deploy-pypi.outputs.create-release == 'true' }}
+          tags: "ghcr.io/diracgrid/diracx/client:${{ needs.deploy-pypi.outputs.new-version }}"
+          platforms: linux/amd64,linux/arm64
+          build-args: PACKAGES_TO_INSTALL="diracx==${{ needs.deploy-pypi.outputs.new-version }} DIRAC~=9.0.0a1"
+      - name: Build and push services (release)
+        uses: docker/build-push-action@v5
+        if: ${{ needs.deploy-pypi.outputs.create-release == 'true' }}
+        with:
+          context: containers/services/
+          push: ${{ needs.deploy-pypi.outputs.create-release == 'true' }}
+          tags: "ghcr.io/diracgrid/diracx/services:${{ needs.deploy-pypi.outputs.new-version }}"
+          platforms: linux/amd64,linux/arm64
+          build-args: PACKAGES_TO_INSTALL="diracx-routers==${{ needs.deploy-pypi.outputs.new-version }} DIRAC~=9.0.0a1"
+
+      - name: Build and push client (dev)
+        uses: docker/build-push-action@v5
+        if: ${{ needs.deploy-pypi.outputs.create-release != 'true' }}
+        with:
+          context: containers/client/
+          push: ${{ github.event_name != 'pull_request' && github.repository == 'DIRACGrid/diracx' && github.ref_name == 'main' }}
+          tags: ghcr.io/diracgrid/diracx/client:dev
+          build-args: PACKAGES_TO_INSTALL=/bindmount/${{ steps.find_wheel.outputs.diracx_core-wheel-name }} /bindmount/${{ steps.find_wheel.outputs.diracx_client-wheel-name }} /bindmount/${{ steps.find_wheel.outputs.diracx_cli-wheel-name }} /bindmount/${{ steps.find_wheel.outputs.diracx_api-wheel-name }} /bindmount/${{ steps.find_wheel.outputs.diracx-wheel-name }} git+https://github.com/DIRACGrid/DIRAC.git@integration
+      - name: Build and push services (dev)
+        uses: docker/build-push-action@v5
+        if: ${{ needs.deploy-pypi.outputs.create-release != 'true' }}
+        with:
+          context: containers/services/
+          push: ${{ github.event_name != 'pull_request' && github.repository == 'DIRACGrid/diracx' && github.ref_name == 'main' }}
+          tags: ghcr.io/diracgrid/diracx/services:dev
+          build-args: PACKAGES_TO_INSTALL=/bindmount/${{ steps.find_wheel.outputs.diracx_core-wheel-name }} /bindmount/${{ steps.find_wheel.outputs.diracx_db-wheel-name }} /bindmount/${{ steps.find_wheel.outputs.diracx_routers-wheel-name }} git+https://github.com/DIRACGrid/DIRAC.git@integration
