--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -27,13 +27,20 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: '3.11'
-      - name: Prepare environment
+      - name: Build wheels
+        run: |
+          pip install build
+          for pkg_dir in $PWD/diracx-* .; do
+            echo "Building $pkg_dir"
+            python -m build --outdir "${GITHUB_WORKSPACE}/dist" $pkg_dir
+          done
+      - name: Clone DIRAC
         run: |
           pip install typer pyyaml gitpython packaging
           git clone https://github.com/DIRACGrid/DIRAC.git -b "${{ matrix.dirac-branch }}" /tmp/DIRACRepo
           # We need to cd in the directory for the integration_tests.py to work
       - name: Prepare environment
-        run: cd /tmp/DIRACRepo && ./integration_tests.py prepare-environment "TEST_DIRACX=Yes"  --extra-module "diracx=${GITHUB_WORKSPACE}"
+        run: cd /tmp/DIRACRepo && ./integration_tests.py prepare-environment "TEST_DIRACX=Yes"  --diracx-dist-dir "${GITHUB_WORKSPACE}/dist"
       - name: Install server
         run:  cd /tmp/DIRACRepo && ./integration_tests.py install-server
       - name: Install client
