--- a/containers/client/Dockerfile
+++ b/containers/client/Dockerfile
@@ -5,7 +5,7 @@ FROM ghcr.io/diracgrid/diracx/client-base
 # * from pypi "diracx==v0.a.b"
 ARG PACKAGES_TO_INSTALL
 
-RUN --mount=type=bind,source=.,target=/bindmount /entrypoint.sh bash -c "pip install --no-deps ${PACKAGES_TO_INSTALL} && pip check"
+RUN --mount=type=bind,source=.,target=/bindmount bash -c 'DIRACX_CUSTOM_SOURCE_PREFIXES=/bindmount /entrypoint.sh pip check'
 
 # In many clusters the container is ran as a random uid for security reasons.
 # If we mark the conda directory as group 0 and give it group write permissions
