Simplify building versioned images

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -190,7 +190,7 @@ jobs:
           push: ${{ needs.deploy-pypi.outputs.create-release == 'true' }}
           tags: "ghcr.io/diracgrid/diracx/client:${{ needs.deploy-pypi.outputs.new-version }}"
           platforms: linux/amd64,linux/arm64
-          build-args: PACKAGES_TO_INSTALL="diracx==${{ needs.deploy-pypi.outputs.new-version }} DIRAC~=9.0.0a1"
+          build-args: EXTRA_PACKAGES_TO_INSTALL="diracx==${{ needs.deploy-pypi.outputs.new-version }} DIRAC~=9.0.0a1"
       - name: Build and push services (release)
         uses: docker/build-push-action@v5
         if: ${{ needs.deploy-pypi.outputs.create-release == 'true' }}
@@ -199,7 +199,7 @@ jobs:
           push: ${{ needs.deploy-pypi.outputs.create-release == 'true' }}
           tags: "ghcr.io/diracgrid/diracx/services:${{ needs.deploy-pypi.outputs.new-version }}"
           platforms: linux/amd64,linux/arm64
-          build-args: PACKAGES_TO_INSTALL="diracx-routers==${{ needs.deploy-pypi.outputs.new-version }} DIRAC~=9.0.0a1"
+          build-args: EXTRA_PACKAGES_TO_INSTALL="diracx-routers==${{ needs.deploy-pypi.outputs.new-version }} DIRAC~=9.0.0a1"
 
       - name: Build and push client (dev)
         uses: docker/build-push-action@v5
@@ -209,7 +209,8 @@ jobs:
           push: ${{ github.event_name != 'pull_request' && github.repository == 'DIRACGrid/diracx' && github.ref_name == 'main' }}
           tags: ghcr.io/diracgrid/diracx/client:dev
           platforms: linux/amd64,linux/arm64
-          build-args: PACKAGES_TO_INSTALL=/bindmount/${{ steps.find_wheel.outputs.diracx_core-wheel-name }} /bindmount/${{ steps.find_wheel.outputs.diracx_client-wheel-name }} /bindmount/${{ steps.find_wheel.outputs.diracx_cli-wheel-name }} /bindmount/${{ steps.find_wheel.outputs.diracx_api-wheel-name }} /bindmount/${{ steps.find_wheel.outputs.diracx-wheel-name }} git+https://github.com/DIRACGrid/DIRAC.git@integration
+          build-args: |
+            EXTRA_PACKAGES_TO_INSTALL=git+https://github.com/DIRACGrid/DIRAC.git@integration
       - name: Build and push services (dev)
         uses: docker/build-push-action@v5
         if: ${{ needs.deploy-pypi.outputs.create-release != 'true' }}
@@ -218,4 +219,5 @@ jobs:
           push: ${{ github.event_name != 'pull_request' && github.repository == 'DIRACGrid/diracx' && github.ref_name == 'main' }}
           tags: ghcr.io/diracgrid/diracx/services:dev
           platforms: linux/amd64,linux/arm64
-          build-args: PACKAGES_TO_INSTALL=/bindmount/${{ steps.find_wheel.outputs.diracx_core-wheel-name }} /bindmount/${{ steps.find_wheel.outputs.diracx_db-wheel-name }} /bindmount/${{ steps.find_wheel.outputs.diracx_routers-wheel-name }} git+https://github.com/DIRACGrid/DIRAC.git@integration
+          build-args: |
+            EXTRA_PACKAGES_TO_INSTALL=git+https://github.com/DIRACGrid/DIRAC.git@integration
