--- a/containers/services/Dockerfile
+++ b/containers/services/Dockerfile
@@ -1,11 +1,8 @@
 FROM ghcr.io/diracgrid/diracx/services-base
 
-# Needs to specify how we install diracx
-# * from a local wheel package: PACKAGES_TO_INSTALL=/path/to/diracx.whl
-# * from pypi "diracx==v0.a.b"
-ARG PACKAGES_TO_INSTALL
+ARG EXTRA_PACKAGES_TO_INSTALL
 
-RUN --mount=type=bind,source=.,target=/bindmount /entrypoint.sh bash -c "pip install --no-deps ${PACKAGES_TO_INSTALL} && pip check"
+RUN --mount=type=bind,source=.,target=/bindmount DIRACX_CUSTOM_SOURCE_PREFIXES=/bindmount /entrypoint.sh bash -ec "pip install --no-deps ${EXTRA_PACKAGES_TO_INSTALL} && pip check"
 
 # In many clusters the container is ran as a random uid for security reasons.
 # If we mark the conda directory as group 0 and give it group write permissions
