Move to ClientFactory

--- a/diracx-client/pyproject.toml
+++ b/diracx-client/pyproject.toml
@@ -47,3 +47,6 @@ addopts = [
     "--import-mode=importlib",
 ]
 asyncio_mode = "auto"
+markers = [
+    "enabled_dependencies: List of dependencies which should be available to the FastAPI test client",
+]
