--- a/diracx-db/pyproject.toml
+++ b/diracx-db/pyproject.toml
@@ -56,3 +56,6 @@ addopts = [
     "--import-mode=importlib",
 ]
 asyncio_mode = "auto"
+markers = [
+    "enabled_dependencies: List of dependencies which should be available to the FastAPI test client",
+]
