--- a/diracx-routers/pyproject.toml
+++ b/diracx-routers/pyproject.toml
@@ -70,3 +70,6 @@ addopts = [
     "--import-mode=importlib",
 ]
 asyncio_mode = "auto"
+markers = [
+    "enabled_dependencies: List of dependencies which should be available to the FastAPI test client",
+]
