--- a/diracx-cli/tests/legacy/cs_sync/integration_test.cfg
+++ b/diracx-cli/tests/legacy/cs_sync/integration_test.cfg
@@ -30,6 +30,49 @@ DiracX
 {
   URL = https://dirac-integration-tests.invalid:1234
   LegacyExchangeApiKey = diracx:legacy:ChangeME
+
+  CsSync
+  {
+    VOs
+    {
+      Jenkins
+      {
+        DefaultGroup = jenkins_user
+        IdP
+        {
+          ClientID = 995ed3b9-d5bd-49d3-a7f4-7fc7dbd5a0cd
+          URL = https://jenkins.invalid/
+        }
+        UserSubjects
+        {
+          adminusername = e2cb28ec-1a1e-40ee-a56d-d899b79879ce
+          ciuser = 26dbe36e-cf5c-4c52-a834-29a1c904ef74
+          trialUser = a95ab678-3fa4-41b9-b863-fe62ce8064ce
+        }
+        Support
+        {
+          Message = Contact the help desk
+          Email = helpdesk@example.invalid
+          Webpage = https://helpdesk.vo.invalid
+        }
+      }
+      vo
+      {
+        DefaultGroup = dirac_user
+        IdP
+        {
+          ClientID = 072afab5-ed92-46e0-a61d-4ecbc96e0770
+          URL = https://vo.invalid/
+        }
+        UserSubjects
+        {
+          adminusername = 26b14fc9-6d40-4ca5-b014-6234eaf0fb6e
+          ciuser = d3adc733-6588-4d6f-8581-5986b02d0c87
+          trialUser = ff2152ff-34f4-4739-b106-3def37e291e3
+        }
+      }
+    }
+  }
 }
 Systems
 {
