--- a/diracx-cli/tests/legacy/cs_sync/integration_test.yaml
+++ b/diracx-cli/tests/legacy/cs_sync/integration_test.yaml
@@ -70,19 +70,26 @@ Registry:
       ClientID: 995ed3b9-d5bd-49d3-a7f4-7fc7dbd5a0cd
       URL: https://jenkins.invalid/
     Support:
-      Email: "helpdesk@example.invalid"
-      Message: "Contact the help desk"
-      Webpage: "https://helpdesk.vo.invalid"
+      Email: helpdesk@example.invalid
+      Message: Contact the help desk
+      Webpage: https://helpdesk.vo.invalid
     Users:
       26dbe36e-cf5c-4c52-a834-29a1c904ef74:
+        DNs:
+        - /C=ch/O=DIRAC/OU=DIRAC CI/CN=ciuser
         Email: lhcb-dirac-ci@cern.ch
         PreferedUsername: ciuser
       a95ab678-3fa4-41b9-b863-fe62ce8064ce:
+        DNs:
+        - /C=ch/O=DIRAC/OU=DIRAC CI/CN=trialUser
         Email: lhcb-dirac-ci@cern.ch
         PreferedUsername: trialUser
       e2cb28ec-1a1e-40ee-a56d-d899b79879ce:
+        DNs:
+        - /C=ch/O=DIRAC/OU=DIRAC CI/CN=ciuser
         Email: lhcb-dirac-ci@cern.ch
         PreferedUsername: adminusername
+    VOMSName: myVOMS
   vo:
     DefaultGroup: dirac_user
     Groups:
@@ -110,12 +117,18 @@ Registry:
     Support: {}
     Users:
       26b14fc9-6d40-4ca5-b014-6234eaf0fb6e:
+        DNs:
+        - /C=ch/O=DIRAC/OU=DIRAC CI/CN=ciuser
         Email: lhcb-dirac-ci@cern.ch
         PreferedUsername: adminusername
       d3adc733-6588-4d6f-8581-5986b02d0c87:
+        DNs:
+        - /C=ch/O=DIRAC/OU=DIRAC CI/CN=ciuser
         Email: lhcb-dirac-ci@cern.ch
         PreferedUsername: ciuser
       ff2152ff-34f4-4739-b106-3def37e291e3:
+        DNs:
+        - /C=ch/O=DIRAC/OU=DIRAC CI/CN=trialUser
         Email: lhcb-dirac-ci@cern.ch
         PreferedUsername: trialUser
 Resources:
