--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,11 +44,22 @@ select = [
     # "UP",   # pyUpgrade
     "FLY",  # flynt
     "DTZ",  # flake8-datetimez
+    "S", # flake8-bandit
 ]
-ignore = ["B905", "B008", "B006"]
+ignore = ["B905",
+          "B008",
+          "B006",
+          "S101", # bandit: use of assert https://docs.astral.sh/ruff/rules/assert/
+          ]
 line-length = 120
 src = ["diracx-*/src", "diracx-*/tests"]
 exclude = ["diracx-client/src/diracx/client/"]
+
+
+[tool.ruff.lint.per-file-ignores]
+# Ignore Bandit security checks in the test directories
+"diracx-testing/*" = ["S"]
+"diracx-*/tests/*" = ["S"]
 
 [tool.isort]
 profile = "black"
