--- a/extensions/mydiracx/pyproject.toml
+++ b/extensions/mydiracx/pyproject.toml
@@ -33,7 +33,7 @@ requires = ["setuptools>=61", "wheel", "setuptools_scm>=8"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools_scm]
-root = ".."
+root = "../.."
 
 [tool.ruff]
 select = [
